Overflow fix

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 
 
 body {
-	
+	overflow: hidden;
 
   font-family: mainFont;
 	height:100vh;
